--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -676,6 +676,7 @@ body {
 
     .post-description {
       text-align: center;
+      margin-top: 0.6rem;
     }
 
     .post-tags {
@@ -740,6 +741,8 @@ table {
 
 .post-content {
   line-height: 1.7rem;
+  max-width: 50rem;
+  margin: 0 auto;
 }
 
 .members-list {
@@ -768,7 +771,6 @@ table {
   font-weight: 300;
   color: var(--text-color-darker);
 }
-
 
 .member-item .member-description {
   text-align: center;
@@ -880,11 +882,17 @@ table {
   border-radius: 100%;
 }
 
+p:has(img) {
+  display: flex;
+  flex-direction: column;
+}
+
 p img {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
   border-radius: 0.75rem;
   border: 1px solid #654e52;
+  align-self: center;
 }
 
 .language-flag-indicator {
@@ -898,6 +906,7 @@ pre:is(.highlight) {
 .post-content {
   p {
     margin-bottom: 1rem;
+    text-align: justify;
   }
 }
 
